--- a/BlogUI/package.json
+++ b/BlogUI/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
+    "reactjs-popup": "^2.0.6",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0"
   },
