--- a/Nrv-Blog-API/src/main/resources/application.properties
+++ b/Nrv-Blog-API/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Nrv-Blog-API
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/nrv_blog?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=nrv16sql$$
+spring.datasource.url=${db_url}
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 # JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
